# photon_prod

./: .gitignore  README.md
Bridge/: Makefile  Makefile.am  Makefile.in  TODO  amconfig.h  amconfig.in  config.status  configure  configure.ac  libtool
Bridge/src/: LHAPDF.h  Makefile  Makefile.am  Makefile.in  mcfm_grid.cxx  mcfm_grid.h  mcfm_interface.cxx  mcfm_interface.cxx.backup  standSimple  standSimple.cxx
Bridge/src/.deps/: standSimple-standSimple.Po
MCFM-6.8/: makefile  makefile.orig
MCFM-6.8/Doc/: latex.out
MCFM-6.8/QCDLoop/: makefile  test
MCFM-6.8/QCDLoop/ff/: makefile
MCFM-6.8/src/Inc/: leptcuts.f
MCFM-6.8/src/Need/: reader_input.f  writeinput.f
MCFM-6.8/src/Phase/: gen_Vphotons_jets.f  gen_Vphotons_jets_dkrad.f  gen_Vphotons_jets_dkrad2.f  gen_photons_jets.f
MCFM-6.8/src/User/: photoncuts.f
mcfmbridge/share/doc/mcfm-bridge/: INSTALL  README
